--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -64,23 +64,23 @@
       <ion-grid>
         <ion-row>
           <ion-col>Source</ion-col>
-          <ion-col>{{dish?.upSignal.spacecraft}}</ion-col>
+          <ion-col>{{dish?.upSignal.spacecraft | spacecraft}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Type</ion-col>
-          <ion-col>{{dish?.upSignal.signalType}}</ion-col>
+          <ion-col>{{dish?.upSignal.signalType | uppercase}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Data Rate</ion-col>
-          <ion-col>{{dish?.upSignal.dataRate}}</ion-col>
+          <ion-col>{{dish?.upSignal.dataRate | dataRate}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Frequency</ion-col>
-          <ion-col>{{dish?.upSignal.frequency}}</ion-col>
+          <ion-col>{{dish?.upSignal.frequency | frequency}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Power Transmitted</ion-col>
-          <ion-col>{{dish?.upSignal.power}}</ion-col>
+          <ion-col>{{dish?.upSignal.power | power:'up'}}</ion-col>
         </ion-row>
       </ion-grid>
     </ion-card-content>
@@ -94,23 +94,24 @@
       <ion-grid>
         <ion-row>
           <ion-col>Source</ion-col>
-          <ion-col>{{downSignal?.spacecraft}}</ion-col>
+          <ion-col>{{downSignal?.spacecraft | spacecraft}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Type</ion-col>
-          <ion-col>{{downSignal?.signalType}}</ion-col>
+          <ion-col>{{downSignal?.signalType | uppercase}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Data Rate</ion-col>
-          <ion-col>{{downSignal?.dataRate}}</ion-col>
+          <ion-col>{{downSignal?.dataRate | dataRate}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Frequency</ion-col>
-          <ion-col>{{downSignal?.frequency}}</ion-col>
+          <ion-col>{{downSignal?.frequency | frequency}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col>Power Received</ion-col>
-          <ion-col>{{downSignal?.power}}</ion-col>
+          <ion-col [innerHTML]="downSignal?.power | power:'down'"></ion-col>
+          <!-- <ion-col>{{downSignal?.power | power:'down'}}</ion-col> -->
         </ion-row>
       </ion-grid>
     </ion-card-content>
